--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
@@ -10,6 +11,7 @@
       </ul>
     </div>
   <% end %>
+  <h3>Join WythMe!</h3>
 
   <div class="field">
     <%= f.label :username %><br>
@@ -28,6 +30,6 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Join", :class => "btn btn-md btn-custom btn-join" %>
   </div>
 <% end %>
