--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-md-9">
-      <h2 class="text-center">Happening Today</h2>
+      <h2 class="text-center">Today's Events</h2>
 
       <%= render partial: 'events/list_index' %>
       
