--- a/app/views/events/_modal.html.erb
+++ b/app/views/events/_modal.html.erb
@@ -71,7 +71,7 @@
         </div>
 
         <div class="actions text-center">
-          <%= f.submit %>
+          <%= f.submit :class => 'btn btn-custom btn-md btn-create' %>
         </div>
       <% end %>
 
