changed margins on sign-in form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -242,9 +242,12 @@
 
 .new_user {
 
-	margin-right: 50px;
-	width: 70%;
+	
+	width: 80%;
 	padding-top: 10px;
+	padding-left: 20px;
+	margin-top: 90px;
+	margin-left: 10px;
 
 
 }
