--- a/app/views/events/_modal.html.erb
+++ b/app/views/events/_modal.html.erb
@@ -67,7 +67,7 @@
 
           <div class="field">
           <%= f.label :datetime %>
-          <%= f.datetime_select :datetime %>
+          <%= f.datetime_select :datetime, :ampm => true %>
         </div>
 
         <div class="actions text-center">
