--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,28 +3,30 @@
 <!-- Event Owner  -->
 
 <div class="row">
-	<div class="col-md-4 col-md-offset-4">
+	<div class="col-md-4 col-md-offset-4 event-details">
 		<h2><%= @event.description %></h2>
 		<hr>
 
-			<p><em>Happening:</em>
-			 <%= @event.date %> at <%= @event.time %>   
+			<p class=""><em>Happening:</em></p>
+			 <%= @event.date %> at <%= @event.time %> 
+			 <br>
+			 <br>  
 		
 
-		<p><em>Meet at:</em>
+		<p><em>Meet at:</em></p>
 		<% if !@event.location.nil? %>
 			 <%= @event.location.capitalize %>,   
 		<% end %> 
 
 
-		<%= @event.street_address %>, <%= @event.zip_code %></p>
+		<%= @event.street_address %>, <%= @event.zip_code %>
 
 		<hr> 
 
 		<!-- feel like I'm about to need a method -->
 		<div>
 
-		Organizer: <%= @event_owner.username %> <%= image_tag @event_owner.avatar.url(:thumb), class: "organizer pull-right" %>
+		<p>Organizer:</p> <%= @event_owner.username %> <%= image_tag @event_owner.avatar.url(:thumb), class: "organizer pull-right" %>
 
 		<br>
 		<br>
