buttons on root redirecting properly

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice text-center"><%= notice %></p>
+<p class="text-center" id="notice"><%= notice %></p>
 
 <div class="container">
   <div class="row">
