--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
     	<div class="row">
     		<div class="text-center footer-text">
-    			Hecho en Miami con <i class="fa fa-coffee"></i>
+    			Spontaneous Socialization on Tap <i class="fa fa-coffee"></i>
     		</div>
     	</div>
 		</div>
