--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,7 +48,7 @@
 
    </div> <!-- col-md-3 -->
 
-    <div class="col-md-9">
+    <div class="col-md-9 main-menu">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#events" data-toggle="tab">Happening Today</a></li>
         <li><a href="#profile" data-toggle="tab">Profile</a></li>
