--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,7 +45,7 @@
 
 		<hr>
 
-		<div class="text-center">
+		<div class="text-center event-page-button">
 
 	       	<% if @event.user_is_event_organizer?(current_user) %>
 
