--- a/app/views/users/_form_edit.html.erb
+++ b/app/views/users/_form_edit.html.erb
@@ -31,6 +31,6 @@
   </div>
 
 		<div class="actions">
-    <%= f.submit "Edit Profile", :class => 'btn btn-custom btn-md btn-create' %>
+    <%= f.submit "Save Profile", :class => 'btn btn-custom btn-md btn-create' %>
   	</div>
 <% end %>
