--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -209,12 +209,9 @@
 
 
  footer {
-
- 	margin-top: -20px; 
- 	margin-bottom: 0px;
- 	padding-bottom: 20px;
 	
-
+    position: fixed;
+    bottom: 0;
 
  }
 
