--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class="navbar navbar-default">
-    <div class="container-fluid">
+<footer class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
     	<div class="row">
     		<div class="text-center footer-text">
     			Spontaneous Socialization on Tap <i class="fa fa-coffee"></i>
