changed picture dispplay in event show page

--- a/app/views/events/_list_attendees.html.erb
+++ b/app/views/events/_list_attendees.html.erb
@@ -3,19 +3,9 @@
 		<tr>
 		<% @attendees.each do |attendee| %>
 
-		<td> 
-
-		<% if attendee.first_name %> 
-			<%= attendee.first_name.capitalize %> 
-
-		<% else %> 
-
-			<%= attendee.username.capitalize %> 
-
-		<% end %> 
-			<%= image_tag attendee.avatar.url(:thumb), class: "attendee pull-right" %>
-
-	  </td>
+		<td> <%= attendee.username.capitalize %> </td>
+		<td> <%= image_tag attendee.avatar.url(:thumb), class: "attendee pull-right" %> </td>
+	  
 			
 
 
